Added project to IntelliJ IDEA.